# kubevirt

./: BUILD.bazel  WORKSPACE  vm-migratable.yaml
api/openapi-spec/: swagger.json
cmd/virt-launcher/: BUILD.bazel  virt-launcher.go
cmd/virt-operator/: BUILD.bazel
hack/: bazel-build-images.sh  bazel-fmt.sh  bazel-push-images.sh  bootstrap.sh  dockerized
pkg/hotplug/: BUILD.bazel  validations.go
pkg/virt-api/webhooks/validating-webhook/admitters/: BUILD.bazel  vmi-update-admitter.go  vms-admitter.go  vms-admitter_test.go
pkg/virt-config/: feature-gates.go  virt-config.go
pkg/virt-controller/watch/: BUILD.bazel  vm.go  vm_test.go
pkg/virt-controller/watch/vm/: vm.go  vm_test.go
pkg/virt-handler/: BUILD.bazel  vm.go
pkg/virt-launcher/virtwrap/: manager.go
pkg/virt-launcher/virtwrap/api/: deepcopy_generated.go  schema.go
pkg/virt-launcher/virtwrap/converter/: converter.go
pkg/virt-launcher/virtwrap/efi/: BUILD.bazel  efi.go  efi_test.go
pkg/virt-operator/: application.go  kubevirt.go  kubevirt_test.go
pkg/virt-operator/resource/apply/: BUILD.bazel  apps.go  apps_test.go  crds.go  crds_test.go  reconcile.go  update.go
pkg/virt-operator/resource/generate/components/: deployments.go  validations_generated.go
pkg/virt-operator/resource/generate/install/: BUILD.bazel  strategy.go  strategy_test.go
pkg/virt-operator/util/: readycheck.go
rpm/: BUILD.bazel
staging/src/kubevirt.io/api/core/v1/: schema.go  (+4 more)
staging/src/kubevirt.io/client-go/api/: openapi_generated.go
tests/: BUILD.bazel  operator_test.go  utils.go
tests/hotplug/: memory.go
(+1 files in other folders)
