load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["validations.go"],
    importpath = "kubevirt.io/kubevirt/pkg/hotplug",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/virt-launcher/virtwrap/converter:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/validation/field:go_default_library",
    ],
)
